# notana

./: .gitignore  README.md  client.sh  client_2.sh  docker-compose.yml  front.sh  server.sh  test.sh
client/: Cargo.toml  Dockerfile
client/src/: main.rs
client_2/: Cargo.toml
client_2/src/: main.rs
common/: Cargo.toml  rustfmt.toml
common/src/: element.rs  example-base.md  example-generated-2.html  example-generated.html  example-generated.json  example-generated.md  lib.rs  page.rs  test.rs  to_html.rs  to_md.rs
comon/: Cargo.toml
comon/src/: lib.rs
examples/in/notana/: home.md
examples/in/tasty_bakery/: home.md
examples/in/yummy_for_charity/: home.md
front/: example-notana.md  example.md  index.css  index.html  index.html.template  index.js
pretty_html/: main.py
server/: Cargo.toml
server/src/: main.rs
wasm/: Cargo.toml
