[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "*", features = ["full"] }
futures-util = "*"
futures-channel = "*"
env_logger = "*"
log = { version = "*" }
taskini-common = { path = "../comon" }
serde_json = "*"
serde = { version = "*", features = ["derive"] }